objects/Addendum__c.object
<CustomObject><fields>
        <fullName>ALPS_Implemented_and_Reviewed_Annually__c</fullName>
        <description>Section V:  Supporting Addenda Forms
2013-14 DIST Gifted Program Addendum</description>
        <inlineHelpText>ALPS are implemented and annually reviewed for every gifted student for monitoring individual achievement and affective goals.</inlineHelpText>
        <label>ALPS Implemented and Reviewed Annually</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Accomplish_Priorities_set_through_C_GER__c</fullName>
        <description>Section V:  Supporting Addenda Forms
2013-14 DIST Gifted Program Addendum</description>
        <inlineHelpText>AU will accomplish priorities set through the Colorado Gifted Education Review (C-GER).</inlineHelpText>
        <label>Accomplish Priorities set through C-GER</label>
        <picklist>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Adopted_Governance_Structure__c</fullName>
        <description>Describe the new governance structure that was adopted.  This structure may include, but is not limited to, requiring the school to report to a turnaround office in the LEA, hiring a turnaround leader who reports directly to the Superintendent or Chief Academic Officer, or entering into a multi-year contract with the LEA to obtain added flexibility in exchange for greater accountability.</description>
        <inlineHelpText>Describe the new governance structure that was adopted.  This structure may include, but is not limited to, requiring the school to report to a turnaround office in the LEA, hiring a turnaround leader who reports directly to the Superintendent or Chief Ac</inlineHelpText>
        <label>Adopted Governance Structure</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Analysis_of_Data__c</fullName>
        <description>Section V:  Supporting Addenda Forms
2013-14_DIST_SGCPAddendum</description>
        <inlineHelpText>The Plan includes description and analysis of the following data: Dropout rate, graduation rate, completion rate, truancy rate, suspension rate, expulsion rate, mobility rate, and number of habitually truant students.</inlineHelpText>
        <label>Analysis of Data</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Budget_and_Planning_is_Collaborative__c</fullName>
        <description>Section V:  Supporting Addenda Forms
2013-14 DIST Gifted Program Addendum</description>
        <inlineHelpText>The budget and improvement planning process is a collaboration among stakeholders of schools or districts within the administrative unit.</inlineHelpText>
        <label>Budget and Planning is Collaborative</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Certified_Person_to_Administer_the_Plan__c</fullName>
        <description>Section V:  Supporting Addenda Forms
2013-14 DIST Gifted Program Addendum</description>
        <inlineHelpText>The district/BOCES provides a certified person to administer the gifted education program plan, provide professional development, and facilitate implementation of the READ Act to accelerate reading skills of advanced readers.</inlineHelpText>
        <label>Certified Person to Administer the Plan</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Charter_Conversion_Description__c</fullName>
        <label>Charter Conversion Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Charter_Conversion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>(For schools without a charter) The school has converted to a charter school.</description>
        <inlineHelpText>(For schools without a charter) The school has converted to a charter school.</inlineHelpText>
        <label>Charter Conversion</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Community_Involvement__c</fullName>
        <description>How are staff, parents and other members of the community collaborating to influence program design?</description>
        <inlineHelpText>How are staff, parents and other members of the community collaborating to influence program design?</inlineHelpText>
        <label>Community Involvement</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Comprehensive_Needs_Assessment__c</fullName>
        <description>What are the comprehensive needs that justify the activities supported with Title I funds?</description>
        <inlineHelpText>What are the comprehensive needs that justify the activities supported with Title I funds?</inlineHelpText>
        <label>Comprehensive Needs Assessment</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Coordination_with_ESEA__c</fullName>
        <description>Section V:  Supporting Addenda Forms
DIST Title III Improvement Addendum</description>
        <inlineHelpText>Evidence of coordination with other ESEA programs as appropriate.</inlineHelpText>
        <label>Coordination with ESEA</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Coordination_with_Other_Services__c</fullName>
        <description>How are Title I funds used in coordination with other ESEA, state and local funds?</description>
        <inlineHelpText>How are Title I funds used in coordination with other ESEA, state and local funds?</inlineHelpText>
        <label>Coordination with Other Services</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Core_Content_Teacher_Highly_Qualified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All core content teachers are highly qualified.</description>
        <inlineHelpText>All core content teachers are highly qualified.</inlineHelpText>
        <label>Core Content Teacher Highly Qualified</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Data_Analysis_TitleI__c</fullName>
        <description>How are teachers involved with assessment and data analysis to improve overall student achievement and classroom instruction?</description>
        <inlineHelpText>How are teachers involved with assessment and data analysis to improve overall student achievement and classroom instruction?</inlineHelpText>
        <label>Data Analysis</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Data_Analysis__c</fullName>
        <description>Section V:  Supporting Addenda Forms
2013-14 DIST Gifted Program Addendum</description>
        <inlineHelpText>Provide a data analysis that includes trend statements, prioritized performance challenges and root causes that investigates the needs of selected student groups.</inlineHelpText>
        <label>Data Analysis</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Disaggregate_gifted_student_performance__c</fullName>
        <description>Section V:  Supporting Addenda Forms
2013-14 DIST Gifted Program Addendum</description>
        <inlineHelpText>Disaggregate gifted student performance by sub-groups (e.g., grade ranges, minority, and FRED) to reveal strengths and/or gaps (disparities) in achievement and/or growth on state and/or district assessments.</inlineHelpText>
        <label>Disaggregate gifted student performance</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>District_UIP_for_Combined_Plans__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>District UIP (for Combined Plans)</label>
        <referenceTo>UIP__c</referenceTo>
        <relationshipLabel>Addenda (for Combined Plans)</relationshipLabel>
        <relationshipName>Addenda1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Evaluation_Systems__c</fullName>
        <description>Use rigorous, transparent, and equitable evaluation systems for teachers and principals that: (1) take into account data on student growth as a significant factor as well as other factors (e.g., multiple observation-based assessments) and (2) are designed and developed with teacher and principal involvement.</description>
        <inlineHelpText>Use rigorous, transparent, and equitable evaluation systems for teachers and principals that: (1) take into account data on student growth as a significant factor as well as other factors (e.g., multiple observation-based assessments) and (2) are designed</inlineHelpText>
        <label>Evaluation Systems</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Factors_Preventing_LEA_from_AMAO_target__c</fullName>
        <inlineHelpText>Identify the factors that prevented the LEA from meeting the AMAO targets.  Also, identify the strengths and weaknesses of the current plan, specifically Major Improvement Strategies and/or Action Steps to meet the linguistic (AMAO 1 and 2) and (AMAO 3) .</inlineHelpText>
        <label>Factors Preventing LEA from  AMAO target</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Family_Community_Engagement__c</fullName>
        <description>Provide ongoing mechanisms for family and community engagement.</description>
        <inlineHelpText>Provide ongoing mechanisms for family and community engagement.</inlineHelpText>
        <label>Family &amp; Community Engagement</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>How_is_Achievement_Reported__c</fullName>
        <description>Indicate how student achievement is reported to parents and students, especially when gifted students are above grade level instruction in one or more contents at a grade level.</description>
        <inlineHelpText>Indicate how student achievement is reported to parents and students, especially when gifted students are above grade level instruction in one or more contents at a grade level.</inlineHelpText>
        <label>How is Achievement Reported?</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Identify_Major_Strategies__c</fullName>
        <description>Section V:  Supporting Addenda Forms
2013-14 DIST Gifted Program Addendum</description>
        <inlineHelpText>Identify major (differentiated) strategies to be implemented that support and address the identified performance challenges and will enable the AU to meet the performance targets.</inlineHelpText>
        <label>Identify Major Strategies</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Identify_Professional_Development__c</fullName>
        <description>How are student and staff needs used to identify the high quality professional development?</description>
        <inlineHelpText>How are student and staff needs used to identify the high quality professional development?</inlineHelpText>
        <label>Identify Professional Development</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Implement_ALSP_in_High_Schools__c</fullName>
        <description>Section V:  Supporting Addenda Forms
2013-14 DIST Gifted Program Addendum</description>
        <inlineHelpText>AU will implement ALPs in high schools either as a blended plan with the ICAP or as a separate individual ALP by fall 2014.</inlineHelpText>
        <label>Implement ALSP in High Schools</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Improvement_Strategy__c</fullName>
        <description>Section V:  Supporting Addenda Forms
2013-14_DIST_SGCPAddendum</description>
        <inlineHelpText>Identifies at least one major improvement strategy that is designed to result in (1) improved dropout prevention, including student attendance, and (2) improved student engagement and re-engagement.</inlineHelpText>
        <label>Improvement Strategy</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Increase_ID_of_Gifted_Students__c</fullName>
        <description>Section V:  Supporting Addenda Forms
2013-14 DIST Gifted Program Addendum</description>
        <inlineHelpText>AU will increase the identification of gifted students from traditionally under-represented populations as evidenced in proportionality of local data by 2016.</inlineHelpText>
        <label>Increase ID of Gifted Students</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Innovation_School_Descrption__c</fullName>
        <label>Innovation School Descrption</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Innovation_School__c</fullName>
        <defaultValue>false</defaultValue>
        <description>School has been recognized as an innovation school or is clustered with other schools that have similar governance management structures to form an innovation school zone pursuant to the Innovation Schools Act.</description>
        <inlineHelpText>School has been recognized as an innovation school or is clustered with other schools that have similar governance management structures to form an innovation school zone pursuant to the Innovation Schools Act.</inlineHelpText>
        <label>Innovation School</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Instructional_Program__c</fullName>
        <description>Use data to identify and implement an instructional program that is research-based and vertically aligned from one grade to the next as well as aligned with State academic standards.</description>
        <inlineHelpText>Use data to identify and implement an instructional program that is research-based and vertically aligned from one grade to the next as well as aligned with State academic standards.</inlineHelpText>
        <label>Instructional Program</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Interim_Measures_to_Monitor_Progress__c</fullName>
        <description>Section V:  Supporting Addenda Forms
2013-14 DIST Gifted Program Addendum</description>
        <inlineHelpText>Describe the interim measures to monitor progress of individual student performance for the selected student sub-group or grade level range.</inlineHelpText>
        <label>Interim Measures to Monitor Progress</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>LEA_Grants__c</fullName>
        <description>Describe how the LEA has granted the school sufficient operational flexibility in the following areas: Staffing, Calendars/Time, and budgeting.</description>
        <inlineHelpText>Describe how the LEA has granted the school sufficient operational flexibility in the following areas: Staffing, Calendars/Time, and budgeting.</inlineHelpText>
        <label>LEA Grants</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>LEA_Sponsored__c</fullName>
        <description>Describe how the LEA has granted the principal sufficient operational flexibility in the following areas: Staffing, Calendars/Time, and budgeting.</description>
        <inlineHelpText>Describe how the LEA has granted the principal sufficient operational flexibility in the following areas: Staffing, Calendars/Time, and budgeting.</inlineHelpText>
        <label>LEA Sponsored Operational Flexibility</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>LEA_Support__c</fullName>
        <description>Describe how the school receives ongoing, intensive technical assistance and related support from the LEA, the SEA, or a designated external lead partner organization (such as a school turnaround organization or an EMO).</description>
        <inlineHelpText>Describe how the school receives ongoing, intensive technical assistance and related support from the LEA, the SEA, or a designated external lead partner organization (such as a school turnaround organization or an EMO).</inlineHelpText>
        <label>LEA Support</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Local_Database_of_Gifted_Students__c</fullName>
        <description>Section V:  Supporting Addenda Forms
2013-14 DIST Gifted Program Addendum</description>
        <inlineHelpText>The district/BOCES maintains a local database of gifted students that records the students’ area(s) of strength as defined in regulations: general ability, a specific academic area(s), visual arts, music, performing arts, creativity, and/or leadership.</inlineHelpText>
        <label>Local Database of Gifted Students</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Locally_Adopted_Competencies__c</fullName>
        <description>Describe how locally adopted competencies are used to measure the effectiveness of staff who can work within the turnaround environment to meet the needs of students.  Include (a) how all existing staff were screened and not more than 50 percent rehired and (b) how new staff are selected.</description>
        <inlineHelpText>Describe how locally adopted competencies are used to measure the effectiveness of staff who can work within the turnaround environment to meet the needs of students.  Include (a) how all existing staff were screened and not more than 50 percent rehired a</inlineHelpText>
        <label>Locally Adopted Competencies</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Management_Contractor_Name__c</fullName>
        <description>Provide name of Management Contractor</description>
        <inlineHelpText>Provide name of Management Contractor</inlineHelpText>
        <label>Management Contractor Name</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Model_Section__c</fullName>
        <label>Model Section</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Move_Toward_Growth_Targets_by_2016__c</fullName>
        <description>Section V:  Supporting Addenda Forms
2013-14 DIST Gifted Program Addendum</description>
        <inlineHelpText>AU will be successful in identifying and moving toward gifted student achievement/growth targets by 2016.</inlineHelpText>
        <label>Move Toward Growth Targets by 2016</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Other_Description__c</fullName>
        <label>Other Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Another action of comparable or greater significance or effect has been adopted, including those interventions required for persistently low-performing schools under ESEA (e.g., “turnaround model”, “restart model”, “school closure”, “transformation model”).</description>
        <inlineHelpText>Another action of comparable or greater significance or effect has been adopted, including those interventions required for persistently low-performing schools under ESEA (e.g., “turnaround model”, “restart model”, “school closure”, “transformation model”</inlineHelpText>
        <label>Other</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Parent_Involvement_Policy_is_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The school’s Parent Involvement Policy (including the Parent Compact) is attached.</description>
        <inlineHelpText>The school’s Parent Involvement Policy (including the Parent Compact) is attached.</inlineHelpText>
        <label>Parent Involvement Policy is Attached</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Parent_Involvement__c</fullName>
        <description>How will the capacity for parent involvement be increased?  How will parent involvement allow students served to become proficient or advanced on state assessments?</description>
        <inlineHelpText>How will the capacity for parent involvement be increased?  How will parent involvement allow students served to become proficient or advanced on state assessments?</inlineHelpText>
        <label>Parent Involvement</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Parent_Involvement_and_Outreach_Strategy__c</fullName>
        <description>Section V:  Supporting Addenda Forms
2013-14_DIST_SGCPAddendum</description>
        <inlineHelpText>Identifies the manner in which the district and parents will work together to address dropout risk factors and remediation strategies.</inlineHelpText>
        <label>Parent Involvement and Outreach Strategy</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Parent_Staff_Involvement__c</fullName>
        <description>How are parents and school staff involved in the development of the improvement plan?</description>
        <inlineHelpText>How are parents and school staff involved in the development of the improvement plan?</inlineHelpText>
        <label>Parent &amp; Staff Involvement</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Person_Resp_for_Step_Implementation__c</fullName>
        <description>Describe who has primary responsibility for implementing action steps for improvement of gifted student performance.</description>
        <inlineHelpText>Describe who has primary responsibility for implementing action steps for improvement of gifted student performance.</inlineHelpText>
        <label>Person Resp for Step Implementation</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Policy_or_Guidelines_for_Acceleration__c</fullName>
        <description>Section V:  Supporting Addenda Forms
2013-14 DIST Gifted Program Addendum</description>
        <inlineHelpText>AU will have a policy or guidelines for acceleration. Districts reviewed acceleration plans for students in general and have a local acceleration plan for gifted students.</inlineHelpText>
        <label>Policy or Guidelines for Acceleration</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Practices_Assessment_Additional_Support__c</fullName>
        <description>Section V:  Supporting Addenda Forms
2013-14_DIST_SGCPAddendum</description>
        <inlineHelpText>Describes supports the district will provide to students who leave school prior to graduation and educational alternatives available to students.  A description of the implementation of recommendations from Practices Assessment is included.</inlineHelpText>
        <label>Practices Assessment Additional Support</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Principal_Replacement_Process__c</fullName>
        <description>Describe the process for replacing the principal who led the school prior to commencement of the transformation model (e.g., use of competencies to hire new principal).</description>
        <inlineHelpText>Describe the process for replacing the principal who led the school prior to commencement of the transformation model (e.g., use of competencies to hire new principal).</inlineHelpText>
        <label>Principal Replacement Process</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Procedures_to_ID_Gifted_Students__c</fullName>
        <description>Section V:  Supporting Addenda Forms
2013-14 DIST Gifted Program Addendum</description>
        <inlineHelpText>AU will implement procedures to identify exceptional potential/gifted students in all categories of giftedness.</inlineHelpText>
        <label>Procedures to ID Gifted Students</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Professional_Development_TitleI__c</fullName>
        <description>How are student and staff needs used to identify the high quality professional development?</description>
        <inlineHelpText>How are student and staff needs used to identify the high quality professional development?</inlineHelpText>
        <label>Professional Development</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Professional_Development__c</fullName>
        <description>Provide staff ongoing, high-quality job-embedded professional development that is aligned with the school’s comprehensive instructional program and designed with school staff to ensure that they are equipped to facilitate effective teaching and learning and have the capacity to successfully implement school reform strategies.</description>
        <inlineHelpText>Provide staff ongoing, high-quality job-embedded professional development that is aligned with the school’s comprehensive instructional program and designed with school staff to ensure that they are equipped to facilitate effective teaching and learning a</inlineHelpText>
        <label>Professional Development</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Public_Facing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Facing</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Recruiting_Retaining_Strategies__c</fullName>
        <description>Implement such strategies as financial incentives, increased opportunities for promotion and career growth, and more flexible work conditions that are designed to recruit, place, and retain staff with the skills necessary to meet the needs of the students in the turnaround school.</description>
        <inlineHelpText>Implement such strategies as financial incentives, increased opportunities for promotion and career growth, and more flexible work conditions that are designed to recruit, place, and retain staff with the skills necessary to meet the needs of the students</inlineHelpText>
        <label>Recruiting/Retaining Strategies</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Reform_Strategies__c</fullName>
        <description>What are the major reform strategies to be implemented that strengthen core academic programs, increase the amount and quality of learning, and provide an enriched and accelerated curriculum?</description>
        <inlineHelpText>What are the major reform strategies to be implemented that strengthen core academic programs, increase the amount and quality of learning, and provide an enriched and accelerated curriculum?</inlineHelpText>
        <label>Reform Strategies</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Restructure_Charter_Description__c</fullName>
        <label>Restructure Charter Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Restructure_Charter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>(For schools with a charter) The school’s charter contract has been renegotiated and significantly restructured.</description>
        <inlineHelpText>(For schools with a charter) The school’s charter contract has been renegotiated and significantly restructured.</inlineHelpText>
        <label>Restructure Charter</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Review_on_Progress__c</fullName>
        <description>Section V:  Supporting Addenda Forms
2013-14 DIST Gifted Program Addendum</description>
        <inlineHelpText>Description of Gifted Education Program Requirements
Record reflection on progress towards previous year’s targets.</inlineHelpText>
        <label>Review on Progress</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Reward_Process__c</fullName>
        <description>Describe the process for Identifying and rewarding school leaders, teachers, and other staff who, in implementing this model, have increased student achievement and high school graduation rates.  Include how staff who have not improved their professional practice, after ample opportunities have been provided, are identified and removed.</description>
        <inlineHelpText>Describe the process for Identifying and rewarding school leaders, teachers, and other staff who, in implementing this model, have increased student achievement and high school graduation rates.  Include how staff who have not improved their professional</inlineHelpText>
        <label>Reward Process</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Schedules_and_Strategies__c</fullName>
        <description>Establish schedules and implement strategies that provide increased learning time.</description>
        <inlineHelpText>Establish schedules and implement strategies that provide increased learning time.</inlineHelpText>
        <label>Schedules and Strategies</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>School_Closure_Description__c</fullName>
        <label>School Closure Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>School_Closure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>School Closure</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>School_District_Management_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A public or private entity has been hired that uses research-based strategies and has a proven record of success working with schools or districts under similar circumstances to manage the school or district pursuant to a contract with the local school board or the Charter School Institute.</description>
        <inlineHelpText>A public or private entity has been hired that uses research-based strategies and has a proven record of success working with schools or districts under similar circumstances to manage the school or district pursuant to a contract with the local school bo</inlineHelpText>
        <label>School/District Management Contract</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>School_District_Management_Descrption__c</fullName>
        <label>School/District Management Descrption</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>School_District_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The oversight and management structure of the school or district has been reorganized.  The new structure provides greater, more effective support.</description>
        <inlineHelpText>The oversight and management structure of the school or district has been reorganized.  The new structure provides greater, more effective support.</inlineHelpText>
        <label>School/District Management</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>School_Performance__c</fullName>
        <label>School Performance</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>School_UIP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School UIP</label>
        <referenceTo>UIP__c</referenceTo>
        <relationshipLabel>Addenda (School UIP)</relationshipLabel>
        <relationshipName>Addenda2</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Set_Targets_for_Students_Performance__c</fullName>
        <description>Set targets for gifted students’ performance that meet or exceed state expectations that facilitate gifted students’ achievement and growth (e.g., move-up, keep-up) in their area(s) of strength.</description>
        <inlineHelpText>Set targets for gifted students’ performance that meet or exceed state expectations that facilitate gifted students’ achievement and growth (e.g., move-up, keep-up) in their area(s) of strength.</inlineHelpText>
        <label>Set Targets for Students Performance</label>
        <length>32768</length>
        <type>Html</type>
    </fields>    </recordTypes></CustomObject>